hard-gists/4051357/run.log
=== Docker Run Log for 4051357 ===
Started at: Mi 29. Okt 14:18:53 CET 2025

[2025-10-29 14:18:54] START: Running container for 4051357
[2025-10-29 14:18:54] SUCCESS: Container 9afa48a26cb6990f7fc3b0d5526e128cf9e143fd8165832d486998f7cc21bcd1 started for 4051357
=== Container logs for 4051357 ===
  File "/snippet.py", line 13
    print repository.name
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4051357 ===
[2025-10-29 14:18:56] INFO: Container 9afa48a26cb6990f7fc3b0d5526e128cf9e143fd8165832d486998f7cc21bcd1 has stopped
